Closed
Bug 1699036
Opened 4 years ago
Closed 4 years ago
ld: fatal: symbol 'profiler_is_locked_on_current_thread()' is multiply-defined after Bug 1698493
Categories
(Core :: Gecko Profiler, defect, P1)
Core
Gecko Profiler
Tracking
()
RESOLVED
FIXED
88 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox86 | --- | unaffected |
firefox87 | --- | unaffected |
firefox88 | --- | fixed |
People
(Reporter: petr.sumbera, Assigned: florian)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:86.0) Gecko/20100101 Firefox/86.0
Steps to reproduce:
89:09.14 ld: fatal: symbol 'profiler_is_locked_on_current_thread()' is multiply-defined:
89:09.14 (file ../../../xpcom/base/Unified_cpp_xpcom_base0.o type=FUNC; file ../../../xpcom/ds/Unified_cpp_xpcom_ds1.o type=FUNC);
89:09.14 ld: fatal: symbol 'profiler_is_locked_on_current_thread()' is multiply-defined:
89:09.14 (file ../../../xpcom/base/Unified_cpp_xpcom_base0.o type=FUNC; file ../../../xpcom/components/StaticComponents.o type=FUNC);
89:09.14 ld: fatal: symbol 'profiler_is_locked_on_current_thread()' is multiply-defined:
89:09.14 (file ../../../xpcom/base/Unified_cpp_xpcom_base0.o type=FUNC; file ../../../xpcom/components/Unified_cpp_xpcom_components0.o type=FUNC);
89:09.14 ld: fatal: symbol 'profiler_is_locked_on_current_thread()' is multiply-defined:
89:09.14 (file ../../../xpcom/base/Unified_cpp_xpcom_base0.o type=FUNC; file ../../../xpcom/threads/Unified_cpp_xpcom_threads0.o type=FUNC);
89:09.14 ld: fatal: symbol 'profiler_is_locked_on_current_thread()' is multiply-defined:
89:09.14 (file ../../../xpcom/base/Unified_cpp_xpcom_base0.o type=FUNC; file ../../../xpcom/threads/Unified_cpp_xpcom_threads1.o type=FUNC);
89:09.14 ld: fatal: symbol 'profiler_is_locked_on_current_thread()' is multiply-defined:
89:09.15 (file ../../../xpcom/base/Unified_cpp_xpcom_base0.o type=FUNC; file ../../../xpcom/build/Unified_cpp_xpcom_build0.o type=FUNC);
89:09.15 ld: fatal: symbol 'profiler_is_locked_on_current_thread()' is multiply-defined:
89:09.15 (file ../../../xpcom/base/Unified_cpp_xpcom_base0.o type=FUNC; file ../../../modules/libpref/Unified_cpp_modules_libpref0.o type=FUNC);
89:09.15 ld: fatal: symbol 'profiler_is_locked_on_current_thread()' is multiply-defined:
89:09.15 (file ../../../xpcom/base/Unified_cpp_xpcom_base0.o type=FUNC; file ../../../netwerk/base/Unified_cpp_netwerk_base0.o type=FUNC);
..
89:09.23 ld: fatal: symbol 'profiler_is_locked_on_current_thread()' is multiply-defined:
89:09.23 (file ../../../xpcom/base/Unified_cpp_xpcom_base0.o type=FUNC; file ../../../extensions/pref/autoconfig/src/Unified_cpp_pref_autoconfig_src0.o type=FUNC);
89:09.23 ld: fatal: symbol 'profiler_is_locked_on_current_thread()' is multiply-defined:
89:09.23 (file ../../../xpcom/base/Unified_cpp_xpcom_base0.o type=FUNC; file ../../../startupcache/Unified_cpp_startupcache0.o type=FUNC);
89:09.23 collect2: error: ld returned 1 exit status
89:09.23 gmake[4]: *** [/builds2/psumbera/mozilla-central-build/config/rules.mk:545: libxul.so] Error 1
89:09.23 gmake[3]: *** [/builds2/psumbera/mozilla-central-build/config/recurse.mk:72: toolkit/library/build/target] Error 2
89:09.23 gmake[2]: *** [/builds2/psumbera/mozilla-central-build/config/recurse.mk:34: compile] Error 2
89:09.23 gmake[1]: *** [/builds2/psumbera/mozilla-central-build/config/rules.mk:355: default] Error 2
89:09.23 gmake: *** [client.mk:65: build] Error 2
89:09.24 835 compiler warnings present.
The first bad revision is:
changeset: 571393:e27b36cffb75
user: Florian Quèze <florian@queze.net>
date: Tue Mar 16 05:04:01 2021 -0700
description:
Bug 1698493 - ProfilerState.h should define no-op inline functions to avoid MOZ_GECKO_PROFILER ifdefs in code adding markers, r=gerald.
Differential Revision: https://phabricator.services.mozilla.com/D108457
Reporter | ||
Updated•4 years ago
|
Keywords: regression
Regressed by: 1698493
Updated•4 years ago
|
Has Regression Range: --- → yes
Florian, could you please have a look? If I'm already away if/when you need a review, please ask :canaltinova
Component: Untriaged → Gecko Profiler
Flags: needinfo?(florian)
Priority: -- → P1
Product: Firefox → Core
Assignee | ||
Comment 2•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → florian
Assignee | ||
Comment 3•4 years ago
|
||
(In reply to Gerald Squelart [:gerald] (he/him) from comment #1)
Florian, could you please have a look?
Sorry, looks like it's just a missing inline
keyword.
Flags: needinfo?(florian)
Pushed by fqueze@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/181aeda5c83a
Fix build error on (symbol 'profiler_is_locked_on_current_thread()' is multiply-defined) on platforms with MOZ_GECKO_PROFILER not defined, r=gerald. DONTBUILD
Comment 5•4 years ago
|
||
Set release status flags based on info from the regressing bug 1698493
status-firefox86:
--- → unaffected
status-firefox87:
--- → unaffected
status-firefox88:
--- → affected
status-firefox-esr78:
--- → unaffected
Comment 6•4 years ago
|
||
bugherder |
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•