Bug 1699036 - Fix build error on (symbol 'profiler_is_locked_on_current_thread()' is multiply-defined) on platforms with MOZ_GECKO_PROFILER not defined, r=gerald. DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D108744